# rag-document-qa

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/sample_docs/: embeddings.md  faiss_overview.md  rag_concepts.md
eval/datasets/: sample_eval.jsonl
src/rag_qa/: __init__.py  config.py  exceptions.py  logging_conf.py  service.py
src/rag_qa/api/: deps.py  main.py  middleware.py  routes.py  schemas.py
src/rag_qa/chain/: __init__.py  qa_chain.py
src/rag_qa/cli/: evaluate.py  ingest.py
src/rag_qa/embeddings/: __init__.py  factory.py  fake.py
src/rag_qa/eval/: __init__.py  metrics.py  runner.py
src/rag_qa/ingestion/: __init__.py  chunking.py  loaders.py
src/rag_qa/llm/: __init__.py  base.py  factory.py  fake.py  ollama_client.py
src/rag_qa/vectorstore/: __init__.py  faiss_store.py
tests/: conftest.py
tests/integration/: test_api.py  test_eval_harness.py
tests/unit/: test_chunking.py  test_config.py  test_embeddings.py  test_loaders.py  test_metrics.py  test_qa_chain.py  test_vectorstore.py
